--- a/index.html
+++ b/index.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>registration form</title>
-<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="index.css"/>
-        <body> 
-            <header class="header">
-                <img src="images/logo.jpeg" alt="logo">
-            </header> 
-            <br><br><br><br><br>
-            <div class="container">
-                <nav>
-                    <ul>
-                        <li><a class="active" href="index.html">REGISTER</a></li>
-                        <li><a href="login.html">LOGIN</a></li>
-                        <li><a href="staff.html">STAFF</a></li>
-                        <li><a href="projects.html">PROJECTS</a></li>
-                    </ul>
-                </nav>
-            <div class="form">
-<form>
-
-<h1>Register</h1>
-<label>First name:</label><br>
-<input type="text"placeholder="first name" required><br><br>
-
-<label>Middle name:</label> <br>
-<input type="text" placeLearning about the usage and operation of the asterisk technology which is an open-source PBX/telephony Linux application also practising the operation of the elastix system that is an integrated system which comes with operating system CentOS and other software such as free PBX, Asterisk and Dahdi. Other activities involved were the configuration and management of the elastix and configuration of the extensions. For example, once a client makes a call to the company through an extension number, the call first goes to the servers of the Internet service provider (ISP), then checks where the call belongs to, then it routes the call back to the company through their routers and servers and that is when the calls of the clients are received by the call centre, attended and a ticket is created that records the specific problem of the client and it is assigned to a technician so that it can be solved. holder="middle name" required><br><br>
-
-<label>Last name:</label> <br>
-<input type="text" placeholder="Last name" required><br><br>
-
-<label>Username:</label> <br>
-<input type="text" placeholder="username" required><br>
-
-<input type="submit" value="ADD">
-</form>
-</div>
-
-</div>
-</body>
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="index.css">
+        <div class="topnav">
+            <a class="active" href="index.html">HOME</a>
+            <a href="register.html">REGISTER</a>
+            <a href="login.html">LOGIN</a>
+            <a href="staff.html">STAFF</a>
+            <a href="projects.html">PROJECTS</a>
+            </div>
+        <title> TASK MANAGEMENT</title>
+    </head>
+    <body>
+        <header class="header">
+            <div class="header__text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary--main">TASK <br>MANAGEMENT</span>
+                </h1>
+                <a href="#" class="btn btn--white btn--animated">Welcome</a>
+            </div>
+        </header>
+    </body>
 </html>
