--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <title>LOG IN</title>
 
-	<link rel="stylesheet" type="text/css" href="index.css"/>
+	<link rel="stylesheet" type="text/css" href="login.css"/>
         <body> 
 
             <header class="header">
@@ -14,8 +14,9 @@
             <div class="container">
                 <nav>
                     <ul>
-                        <li><a class="active" href="index.html">REGISTER</a></li>
-                        <li><a href="login.html">LOGIN</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="register.html">REGISTER</a></li>
+                        <li><a class="active" href="login.html">LOGIN</a></li>
                         <li><a href="staff.html">STAFF</a></li>
                         <li><a href="projects.html">PROJECTS</a></li>
                     </ul>
@@ -26,12 +27,6 @@
 
 <label>First name:</label> <br>
 <input type="text"placeholder="first name" required><br><br>
-
-<label>Middle name:</label> <br>
-<input type="text" placeholder="middle name" required><br><br>
-
-<label>Last name:</label> <br>
-<input type="text" placeholder="Last name" required><br><br>
 
 <label>Username:</label> <br>
 <input type="text" placeholder="username" required><br><br>
