--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,11 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a class="active" href="index.html">REGISTER</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="register.html">REGISTER</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                     <li><a href="staff.html">STAFF</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a class="active" href="projects.html">PROJECTS</a></li>
                 </ul>
             </nav>
         <script src="" async defer></script>
