--- a/staff.html
+++ b/staff.html
@@ -12,9 +12,10 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a class="active" href="index.html">REGISTER</a></li>
+                    <li><a href="index.html">WELCOME</a></li>
+                    <li><a href="register.html">REGISTER</a></li>
                     <li><a href="login.html">LOGIN</a></li>
-                    <li><a href="staff.html">STAFF</a></li>
+                    <li><a class="active" href="staff.html">STAFF</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                 </ul>
             </nav>
